package edu.hitsz.prop;

/**
 * 子弹道具
 * 增加英雄子弹个数
 *
 * @author huang
 */
public class BulletProp extends AbstractProp {
    // TODO: no effect now
    public BulletProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}