@startuml
'https://plantuml.com/class-diagram

'extension: <|--
'composition: *--
'aggregation: o--
'.. => dotted line
abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
    # maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
    + setSpeedX(int x):void
}

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
}

AbstractFlyingObject <|---- AbstractAircraft
AbstractFlyingObject <|------ BaseBullet
AbstractFlyingObject <|---- AbstractProp

AbstractAircraft <|------ HeroAircraft
AbstractAircraft <|---- MobEnemy
AbstractAircraft <|------ EliteEnemy
AbstractAircraft <|---- BossEnemy

BaseBullet <|---- HeroBullet
BaseBullet <|---- EnemyBullet

AbstractProp <|----- BloodProp
AbstractProp <|------- BombProp
AbstractProp <|----- BulletProp

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - {static} instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + getInstance():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + getMaxHp():int
    + increaseShootNum(int num):void
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class BossEnemy {
    - shootNum:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
    int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
    int speedX, int speedY, int power)
}

class BloodProp {
    - blood:int
    + BloodProp(int locationX, int locationY,
    int speedX, int speedY)
    + getBlood():int
}

class BombProp {
    + BombProp(int locationX, int locationY,
    int speedX, int speedY)
}

class BulletProp {
    + BulletProp(int locationX, int locationY,
    int speedX, int speedY)
}

@enduml
